@@ -54,7 +54,6 @@ require 'action_controller/session_management'
 require 'action_controller/http_authentication'
 require 'action_controller/components'
 require 'action_controller/record_identifier'
-require 'action_controller/macros/auto_complete'
 
 require 'action_view'
 ActionController::Base.template_class = ActionView::Base
@@ -75,5 +74,4 @@ ActionController::Base.class_eval do
   include ActionController::HttpAuthentication::Basic::ControllerMethods
   include ActionController::Components
   include ActionController::RecordIdentifier
-  include ActionController::Macros::AutoComplete
 end
