@@ -2,6 +2,8 @@
 
 * Fixed that resource namespaces wouldn't stick to all nested resources #9399 [pixeltrix]
 
+* Moved ActionController::Macros::AutoComplete into the auto_complete plugin on the official Rails svn #9512 [lifofifo]
+
 * Moved ActionController::Macros::InPlaceEditing into the in_place_editor plugin on the official Rails svn #9513 [lifofifo]
 
 * Removed deprecated form of calling xml_http_request/xhr without the first argument being the http verb [DHH]
